log
Thu 04 May 2023 04:38:49 PM UTC: 
 sudoku.c | 15 +++++++++++++++
 1 file changed, 15 insertions(+)
 tests:  2|4
total_score: 15/70
5461c37
Thu 04 May 2023 05:19:23 PM UTC: 
 sudoku.c | 41 +++++++++++++++++++++++++++++++++++++++++
 1 file changed, 41 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:59:11: error: ‘marks’ undeclared (first use in this function); did you mean ‘marcas’?
   59 |           marks[num] = 1;
      |           ^~~~~
      |           marcas
sudoku.c:59:11: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c:47:16: error: unused variable ‘p’ [-Werror=unused-variable]
   47 |   int i, j, k, p;
      |                ^
cc1: all warnings being treated as errors
Compilation failed
0151211
Thu 04 May 2023 05:19:33 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:59:11: error: ‘marks’ undeclared (first use in this function); did you mean ‘marcas’?
   59 |           marks[num] = 1;
      |           ^~~~~
      |           marcas
sudoku.c:59:11: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c:47:16: error: unused variable ‘p’ [-Werror=unused-variable]
   47 |   int i, j, k, p;
      |                ^
cc1: all warnings being treated as errors
Compilation failed
02a23c5
Thu 04 May 2023 05:19:45 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:47:16: error: unused variable ‘p’ [-Werror=unused-variable]
   47 |   int i, j, k, p;
      |                ^
cc1: all warnings being treated as errors
Compilation failed
32494c9
